fix: increased contrast on all links

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -699,3 +699,8 @@ table.metadata td
     content: '';
     display: table;
 }
+
+a {
+    color: rgb(29, 29, 199);
+    text-decoration: none;
+}
